--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^24.2.1",
+    "@types/react": "18.3",
+    "@types/react-dom": "18.3",
     "eslint": "8.57.0",
     "eslint-config-next": "^15.4.6",
     "typescript": "5.4.5"
