--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.54.0",
+    "@faker-js/faker": "^9.9.0",
+    "@supabase/supabase-js": "^2.55.0",
+    "dotenv": "^17.2.1",
     "next": "^15.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
@@ -21,6 +24,7 @@
     "@types/react-dom": "18.3",
     "eslint": "8.57.0",
     "eslint-config-next": "^15.4.6",
-    "typescript": "5.4.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
