--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
-﻿# build & deps
-node_modules/
+﻿node_modules/
 .next/
 out/
 
-# env (NU le urcăm niciodată)
 .env
 .env.local
 .env.*.local
 
-# logs
 npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
-
-# OS / editor
-.DS_Store
-Thumbs.db
-.vscode/
-.idea/
