--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000",
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint . --max-warnings=0",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "lint": "next lint",
     "plop": "plop",
-    "git:pub": "git add -A && git commit -m \"chore: update\" && git push"
+    "git:pub": "git add -A && git commit -m \"chore: update\" && git push",
+    "prepare": "husky",
+    "check": "npm run typecheck && npm run lint",
+    "check:vercel": "vercel pull --yes --environment=production && vercel build"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -28,8 +31,9 @@
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.4.6",
+    "husky": "^9.1.7",
     "plop": "^4.0.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": "20.x",
