--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "git:pub": "git add -A && git commit -m \"chore: update\" && git push",
     "prepare": "husky",
     "check": "npm run typecheck && npm run lint",
-    "check:vercel": "vercel pull --yes --environment=production && vercel build"
+    "check:vercel": "vercel pull --yes --environment=production && vercel build",
+    "test": "echo no tests && exit 0"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
